# Orca

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements-telemetry.txt  requirements.txt  run.py
agents/: __init__.py  base.py  memory.py  prompts.py  scripted.py  worker.py
bus/: __init__.py  bus.py  messages.py
configs/: deep.yaml  deep_hero.yaml  default.yaml  shallow.yaml
contracts/: __init__.py  action.py  behavior_card.py  enums.py  episode.py  execution_memory.py  message.py  observation.py
docs/: ORCA_master_build_spec.md  ORCA_workflow_execution_plan.md
env/: __init__.py  actions.py  observation.py  oracle.py  rng.py  seeds.py  stub_env.py  techtree.py  world.py
eval/: README.md  __init__.py  ablations.py  baselines.py  campaign.py  cost_model.py  harness.py  outcome_model.py  plots.py  records.py  run_campaign.py  run_eval.py  scorers.py  transfer.py  weave_eval.py
llm/: __init__.py  client.py
obs_guard/: __init__.py  coord_leak_test.py
orca/: __init__.py  bandit.py  cards.py  coach.py  digest.py  gate.py  orca.py  scoring.py  situations.py
results/: results.json
reward/: __init__.py  dag.py  reward.py
scripts/: check_fork_gate.py
telemetry/: __init__.py  weave_ops.py
tests/: __init__.py  fixtures.py  test_bus.py  test_config.py  test_contracts.py  test_env.py  test_eval.py  test_fight_e5.py  test_fixes.py  test_integration.py  test_llm.py  test_memory.py  test_multi_agent_loop.py  test_oracle.py  test_oracle_e3.py  test_orca.py  test_reward.py  test_run_loop.py  test_survival_e4.py  test_techtree_e1.py  (+3 more)
(+8 files in other folders)
